switch 'div' for semantic html and others

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="navbar">
+    <nav>
         <div class="logo">NEWS.com</div>
         <ul class="navlinks">
             <input type="checkbox" id="checkbox_toggle" />
@@ -23,16 +23,16 @@
                 <li><a href="#">Contact Us</a></li>
             </div>
         </ul>
-    </div>
-    <div class="news-section">
+    </nav>
+    <section class="news-section">
         <div class="news-heading">
             <h1>Top Headlines of <span id="country"></span> </h1><br>
         </div>
-    </div>
-    <div id="news">
+    </section>
+    <main id="news">
 
-    </div>
-    <div class="footer">
+    </main>
+    <footer>
         <ul class="list1">
             <li><a href="#">About us</a></li>
             <li><a href="#">Contact us</a></li>
@@ -49,7 +49,7 @@
             <li><a href="#">FAQ's</a></li>
             <li><a href="#">Feedback</a></li>
         </ul>
-    </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
