Update in style of navigation bar and Icon
Change in style of navigation bar and icon of website along with minor changes in order and dimensions of elements in order to make website look better.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News.com | Get every news on your fingertips</title>
+    <link rel="icon" href="Assets\global.ico">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -16,17 +17,19 @@
             <label for="checkbox_toggle" class="hamburger">&#9776;</label>
      
             <div class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Latest News</a></li>
-                <li><a href="#">Top News</a></li>
-                <li><a href="#">World</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">LATEST NEWS</a></li>
+                <li><a href="#">TOP NEWS</a></li>
+                <li><a href="#">WORLD</a></li>
+                <li><a href="#">CONTACT US</a></li>
             </div>
         </ul>
     </div>
     <div class="news-section">
         <div class="news-heading">
-            <h1>Top Headlines of <span id="country"></span> </h1><br>
+            <br>
+            <h1 class="top">Top Headlines of <span id="country"></span> </h1><br>
+            <br>
         </div>
     </div>
     <div id="news">
