--- a/index.html
+++ b/index.html
@@ -33,23 +33,22 @@
 
     </div>
     <div class="footer">
-        <ul class="list1"><span id="b">ABOUT US</span><br><hr>
+        <ul class="list1">
             <li><a href="#">About us</a></li>
             <li><a href="#">Contact us</a></li>
             <li><a href="#">Privacy Policy</a></li>
             <li><a href="#">Quick links</a></li>
         </ul>
-        <ul class="list2"><span id="c">NEWS LINKS</span> <br><hr>     
-             <li><a href="#">Latest News</a></li>
+        <ul class="list2">
+            <li><a href="#">Latest News</a></li>
             <li><a href="#">Live TV</a></li>
             <li><a href="#">Bollywood News</a></li>
             <li><a href="#">Politics</a></li>
         </ul>
-        <ul class="list3"> <span id="a">SUPPORT</span><br><hr>
+        <ul class="list3">
             <li><a href="#">FAQ's</a></li>
             <li><a href="#">Feedback</a></li>
         </ul>
-    
     </div>
     <script src="script.js"></script>
 </body>
