world news added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     <div id="news">
 
     </div>
+    <div class="news-section1">
+    <div class="news-heading1"> world news</div>
+    </div>
+    <div id="world_news">
+
+
+    </div>
     <div class="footer">
         <ul class="list1">
             <li><a href="#">About us</a></li>
