new page for world news

--- a/world_news.html
+++ b/world_news.html
@@ -24,12 +24,12 @@
             </div>
         </ul>
     </div>
-    <div class="news-section">
-        <div class="news-heading">
+    <div class="news-section1">
+        <div class="news-heading1">
             <h1>World News </h1><br>
         </div>
     </div>
-    <div id="news">
+    <div id="world_news">
 
     </div>
     <div class="footer">
