--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Latest News</a></li>
                 <li><a href="#">Top News</a></li>
-                <li><a href="#">World</a></li>
+                <li><a href="world_news.html">World</a></li>
                 <li><a href="#">Contact Us</a></li>
             </div>
         </ul>
@@ -30,13 +30,6 @@
         </div>
     </div>
     <div id="news">
-
-    </div>
-    <div class="news-section1">
-    <div class="news-heading1"> world news</div>
-    </div>
-    <div id="world_news">
-
 
     </div>
     <div class="footer">
