--- a/world_news.html
+++ b/world_news.html
@@ -50,6 +50,6 @@
             <li><a href="#">Feedback</a></li>
         </ul>
     </div>
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
 </body>
 </html>
