world news added (#14)
* world news added

* new page for world news

* new script

* corrected

Co-authored-by: Sahil bisht <sahilbisht19334@gmail.com>

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
             <label for="checkbox_toggle" class="hamburger">&#9776;</label>
      
             <div class="menu">
+
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">LATEST NEWS</a></li>
                 <li><a href="#">TOP NEWS</a></li>
-                <li><a href="#">WORLD</a></li>
+                <li><a href="world_news.html">WORLD</a></li>
                 <li><a href="#">CONTACT US</a></li>
+
             </div>
         </ul>
     </div>
