Make the responsive

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
             <br>
         </div>
     </div>
-    <div id="news">
+    <div id="news" class="allnews">
 
     </div>
+    
     <div class="footer">
         <ul class="list1"><span id="b">ABOUT US</span><br><hr>
             <li><a href="#">About us</a></li>
