Added Copyright notice at the bottom of the site

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+<style>
+    p {text-align: center;}
+    </style>
 <body>
     <div class="navbar">
         <div class="logo">NEWS.com</div>
         <ul class="navlinks">
             <input type="checkbox" id="checkbox_toggle" />
             <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-     
             <div class="menu">
-
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">LATEST NEWS</a></li>
                 <li><a href="#">TOP NEWS</a></li>
@@ -54,8 +55,12 @@
             <li><a href="#">FAQ's</a></li>
             <li><a href="#">Feedback</a></li>
         </ul>
-    
     </div>
+    <div class="footer-content">
+        <p> © 2022 Copyright News.<br>
+        All Rights Reserved.
+        </p>
+     </div> 
     <script src="script.js"></script>
 </body>
 </html>
