Navbar and heading updated

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
             </div>
         </ul>
     </div> -->
-    <h1 class="pt-24 Top-Heading">Top Headlines of India
+    <h1 class="pt-24 Top-Heading text-4xl sm:text-xl">Top Headlines of India
     </h1>
+
     <!-- <div class="news-section">
         <div class="news-heading">
             <br>
