Social Icons added to the footer

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
             <li><a href="#">Feedback</a></li>
         </ul>
     </div>
+    <div class="socials">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+    </div>
     <div class="footer-content">
         <p> © 2022 Copyright News.<br>
         All Rights Reserved.
