Social Icons added to the footer (#22)
* Social Icons added to the footer

* Update style.css

* Added social icons

* Rename style.css to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>News.com | Get every news on your fingertips</title>
     <link rel="icon" href="Assets\global.ico">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
 </head>
 <style>
@@ -55,6 +56,11 @@
             <li><a href="#">FAQ's</a></li>
             <li><a href="#">Feedback</a></li>
         </ul>
+    </div>
+    <div class="socials">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
     </div>
     <div class="footer-content">
         <p> © 2022 Copyright News.<br>
