--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>News.com | Get every news on your fingertips</title>
     <link rel="icon" href="Assets\global.ico">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
 </head>
 <style>
