Navbar and card component for news updated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>News.com | Get every news on your fingertips</title>
     <link rel="icon" href="Assets\global.ico">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
     <!-- tailwind CSS -->
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
@@ -52,8 +53,8 @@
   
 
 
-<!-- 
-    <div class="navbar">
+
+    <!-- <div class="navbar">
         <div class="logo">NEWS.com</div>
         <ul class="navlinks">
             <input type="checkbox" id="checkbox_toggle" />
@@ -68,7 +69,8 @@
             </div>
         </ul>
     </div> -->
-    <h1 class="pt-24 Top-Heading text-4xl sm:text-xl">Top Headlines of India
+    
+    <h1 class="pt-24 Top-Heading text-4xl sm:text-xl">Top Headlines of <div id="country"> </div>
     </h1>
 
     <!-- <div class="news-section">
@@ -78,10 +80,12 @@
             </span> </h1><br>
             <br>
         </div>
-    </div>
-    <div id="news"> -->
+    </div> -->
+    <div id="news">
 
     </div>
+
+
     <div class="footer">
         <ul class="list1"><span id="b">ABOUT US</span><br><hr>
             <li><a href="#">About us</a></li>
@@ -100,11 +104,16 @@
             <li><a href="#">Feedback</a></li>
         </ul>
     </div>
-    <div class="footer-content">
+    <div class="socials">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+    </div>
+    <!-- <div class="footer-content">
         <p> © 2022 Copyright News.<br>
         All Rights Reserved.
         </p>
-     </div> 
+     </div>  -->
 
 
     <script src="script.js"></script>
