--- a/index.html
+++ b/index.html
@@ -1,58 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News.com | Get every news on your fingertips</title>
-    <link rel="icon" href="Assets\global.ico">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-
-    <!-- tailwind CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
-    <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
-
-</head>
-<style>
-    p {text-align: center;}
-    </style>
-<body>
-
-   <!-- nav bar  -->
-<nav class="bg-white border-gray-200 px-2 sm:px-4 py-3 navbar">
-    <div class="container flex flex-wrap justify-between items-center mx-auto">
-      <a href="#" class="flex items-center">
-          <img src="./Assets/logo.png" class=" h-10 sm:h-8" alt="Logo">
-      </a>
-      <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
-        <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
-      </button>
-      <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-        <ul class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0  md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-          <li>
-            <a href="#" class="navBtns" aria-current="page">Home</a>
-          </li>
-          <li>
-            <a href="#" class="dark">Latest News</a>
-          </li>
-          <li>
-            <a href="#" class="dark">top News</a>
-          </li>
-          <li>
-            <a href="#" class="dark">World</a>
-          </li>
-          <li class="sm:mt-11">
-            <a href="#" class="contact ">Contact Us</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <link rel="icon" href="Assets\global.ico" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
   
 
-
+    <!-- tailwind CSS -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css"
+    />
+    <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
+  </head>
+  <style>
+    p {
+      text-align: center;
+    }
+  </style>
+  <body>
+    <!-- nav bar  -->
+    <nav class="bg-white border-gray-200 px-2 sm:px-4 py-3 navbar">
+      <div
+        class="container flex flex-wrap justify-between items-center mx-auto"
+      >
+        <a href="#" class="flex items-center">
+          <img src="./Assets/logo.png" class="h-10 sm:h-8" alt="Logo" />
+        </a>
+        <button
+          data-collapse-toggle="navbar-default"
+          type="button"
+          class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+          aria-controls="navbar-default"
+          aria-expanded="false"
+        >
+          <span class="sr-only">Open main menu</span>
+          <svg
+            class="w-6 h-6"
+            aria-hidden="true"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </button>
+        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+          <ul
+            class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+          >
+            <li>
+              <a href="#" class="navBtns" aria-current="page">Home</a>
+            </li>
+            <li>
+              <a href="#" class="dark">Latest News</a>
+            </li>
+            <li>
+              <a href="#" class="dark">top News</a>
+            </li>
+            <li>
+              <a href="#" class="dark">World</a>
+            </li>
+            <li class="sm:mt-11">
+              <a href="#" class="contact">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <!-- <div class="navbar">
         <div class="logo">NEWS.com</div>
@@ -69,9 +101,15 @@
             </div>
         </ul>
     </div> -->
-    
-    <h1 class="pt-24 Top-Heading text-4xl sm:text-xl">Top Headlines of <div id="country"> </div>
-    </h1>
+
+    <main>
+      <h1 class="pt-24 Top-Heading text-4xl sm:text-xl">
+        Top Headlines of
+        <div id="country"></div>
+      </h1>
+
+    <div id="news"></div>
+    </main>
 
     <!-- <div class="news-section">
         <div class="news-heading">
@@ -81,35 +119,40 @@
             <br>
         </div>
     </div> -->
-    <div id="news">
-
-    </div>
-
 
     <div class="footer">
-        <ul class="list1"><span id="b">ABOUT US</span><br><hr>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Quick links</a></li>
-        </ul>
-        <ul class="list2"><span id="c">NEWS LINKS</span> <br><hr>     
-             <li><a href="#">Latest News</a></li>
-            <li><a href="#">Live TV</a></li>
-            <li><a href="#">Bollywood News</a></li>
-            <li><a href="#">Politics</a></li>
-        </ul>
-        <ul class="list3"> <span id="a">SUPPORT</span><br><hr>
-            <li><a href="#">FAQ's</a></li>
-            <li><a href="#">Feedback</a></li>
-        </ul>
+      <ul class="list1">
+        <span id="b">ABOUT US</span
+        ><br />
+        <hr />
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Contact us</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Quick links</a></li>
+      </ul>
+      <ul class="list2">
+        <span id="c">NEWS LINKS</span>
+        <br />
+        <hr />
+        <li><a href="#">Latest News</a></li>
+        <li><a href="#">Live TV</a></li>
+        <li><a href="#">Bollywood News</a></li>
+        <li><a href="#">Politics</a></li>
+      </ul>
+      <ul class="list3">
+        <span id="a">SUPPORT</span
+        ><br />
+        <hr />
+        <li><a href="#">FAQ's</a></li>
+        <li><a href="#">Feedback</a></li>
+      </ul>
     </div>
     <div class="socials">
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
     </div>
-<<<<<<< HEAD
+    <<<<<<< HEAD
     <!-- <div class="footer-content">
 =======
     <div class="footer-content">
@@ -119,7 +162,6 @@
         </p>
      </div>  -->
 
-
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
