--- a/index.html
+++ b/index.html
@@ -149,14 +149,10 @@
       <a href="#"><i class="fab fa-twitter"></i></a>
       <a href="#"><i class="fab fa-facebook"></i></a>
     </div>
-    <!-- <div class="footer-content">
-=======
     <div class="footer-content">
->>>>>>> 43130b1d4a0e466f7b572b82c9cd2a0f1a40e3bc
-        <p> © 2022 Copyright News.<br>
-        All Rights Reserved.
-        </p>
-     </div>  -->
+    <div class="footer-content">
+        <p> © 2022 Copyright News. All Rights Reserved.</p>
+     </div> 
 
     <script src="script.js"></script>
   </body>
