--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css"
     />
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
+    <button onclick="myFunction()"><b>Dark Mode</b></button>
+
+
+
   </head>
   <style>
     p {
@@ -33,6 +37,14 @@
   </style>
   <body>
     <!-- nav bar  -->
+    <script>
+      function myFunction() {
+         var element = document.body;
+         element.classList.toggle("dark-mode");
+      }
+      </script>
+
+
     <nav class="bg-white border-gray-200 px-2 sm:px-4 py-3 navbar">
       <div
         class="container flex flex-wrap justify-between items-center mx-auto"
