--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <main>
       <h1 class="pt-24 Top-Heading text-4xl sm:text-xl">
-        Top Headlines of
+        Top Headlines Around the World
         <div id="country"></div>
       </h1>
 
