--- a/index.html
+++ b/index.html
@@ -156,11 +156,39 @@
         <li><a href="#">Feedback</a></li>
       </ul>
     </div>
-    <div class="socials">
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-facebook"></i></a>
+    <div class="social">
+      <div class="button">
+        <div class="icon">
+          <i class="fab fa-facebook-f"></i>
+        </div>
+        <span> Facebook </span>
+      </div>
+      <div class="button">
+        <div class="icon">
+          <i class="fab fa-instagram"></i>
+        </div>
+        <span> Instagram </span>
+      </div>
+      <div class="button">
+        <div class="icon">
+          <i class="fab fa-github"></i>
+        </div>
+        <span> Github </span>
+      </div>
+      <div class="button">
+        <div class="icon">
+          <i class="fab fa-youtube"></i>
+        </div>
+        <span> YouTube </span>
+      </div>
+      <div class="button">
+        <div class="icon">
+          <i class="fab fa-linkedin"></i>
+        </div>
+        <span> Linkedin </span>
+      </div>
     </div>
+    
     <div class="footer-content">
     <div class="footer-content">
         <p> © 2022 Copyright News. All Rights Reserved.</p>
