--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
   </style>
   <body>
     <!-- dark mode toggle -->
-    <div class="darkMode">
-      <span>Dark Mode</span>
-      <label class="switch">
-        <input type="checkbox" onchange="myFunction()" />
-        <span class="slider round"></span>
-      </label>
-    </div>
+    <div class="toggle">
+      <i class="fa-solid fa-moon toggle-icon"></i>
+      <i class="fa-solid fa-sun toggle-icon"></i>
+      <div class="toggle-ball"></div>
+   </div>
+
     <!-- nav bar  -->
 
     <nav class="bg-white border-gray-200 px-2 sm:px-4 py-3 navbar">
