--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <div class="footer">
       <ul class="list1">
-        <span id="b">ABOUT US</span
+        <span id="b"> <u> ABOUT </u></span
         ><br />
         <li><a href="#">About us</a></li>
         <li><a href="#">Contact us</a></li>
@@ -137,7 +137,7 @@
         <li><a href="#">Quick links</a></li>
       </ul>
       <ul class="list2">
-        <span id="c">NEWS LINKS</span>
+        <span id="c"> <u> NEWS LINKS </u></span>
         <br />
         <li><a href="#">Latest News</a></li>
         <li><a href="#">Live TV</a></li>
@@ -145,7 +145,7 @@
         <li><a href="#">Politics</a></li>
       </ul>
       <ul class="list3">
-        <span id="a">SUPPORT</span
+        <span id="a"> <u> SUPPORT </u></span
         ><br />
         <li><a href="#">FAQ's</a></li>
         <li><a href="#">Feedback</a></li>
