--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <div class="footer">
       <ul class="list1">
-        <span id="b">ABOUT US</span
+        <span id="b"> <strong><u>ABOUT</u></strong> </span
         ><br />
         <li><a href="#">About us</a></li>
         <li><a href="#">Contact us</a></li>
@@ -138,7 +138,7 @@
         <li><a href="#">Quick links</a></li>
       </ul>
       <ul class="list2">
-        <span id="c">NEWS LINKS</span>
+        <span id="c"><strong><u>NEWS LINKS</u></strong></span>
         <br />
         <li><a href="#">Latest News</a></li>
         <li><a href="#">Live TV</a></li>
@@ -146,7 +146,7 @@
         <li><a href="#">Politics</a></li>
       </ul>
       <ul class="list3">
-        <span id="a">SUPPORT</span
+        <span id="a"><strong><u>SUPPORT</u></strong></span
         ><br />
         <li><a href="#">FAQ's</a></li>
         <li><a href="#">Feedback</a></li>
