Changed toggle button (#45)
* Changed toggle button

* Footer section changes

Co-authored-by: Sahil bisht <sahilbisht19334@gmail.com>

--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
   </style>
   <body>
     <!-- dark mode toggle -->
-    <div class="darkMode">
-      <span>Dark Mode</span>
-      <label class="switch">
-        <input type="checkbox" onchange="myFunction()" />
-        <span class="slider round"></span>
-      </label>
-    </div>
+    <div class="toggle">
+      <i class="fa-solid fa-moon toggle-icon"></i>
+      <i class="fa-solid fa-sun toggle-icon"></i>
+      <div class="toggle-ball"></div>
+   </div>
+
     <!-- nav bar  -->
 
     <nav class="bg-white border-gray-200 px-2 sm:px-4 py-3 navbar">
@@ -130,7 +129,10 @@
 
     <div class="footer">
       <ul class="list1">
+
+
         <span id="b"> <strong><u>ABOUT</u></strong> </span
+
         ><br />
         <li><a href="#">About us</a></li>
         <li><a href="#">Contact us</a></li>
@@ -138,7 +140,11 @@
         <li><a href="#">Quick links</a></li>
       </ul>
       <ul class="list2">
+
+   
+
         <span id="c"><strong><u>NEWS LINKS</u></strong></span>
+
         <br />
         <li><a href="#">Latest News</a></li>
         <li><a href="#">Live TV</a></li>
@@ -146,7 +152,10 @@
         <li><a href="#">Politics</a></li>
       </ul>
       <ul class="list3">
+
+
         <span id="a"><strong><u>SUPPORT</u></strong></span
+
         ><br />
         <li><a href="#">FAQ's</a></li>
         <li><a href="#">Feedback</a></li>
