--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <a href="#" class="navBtns" aria-current="page">Home</a>
             </li>
             <li>
-              <a href="#" class="dark">Latest News</a>
+              <a class="hoverLink" href="#" class="dark">Latest News</a>
             </li>
             <li>
               <a href="#" class="dark">top News</a>
