Hover Effect on footer (#60)
* Hover Effect

* Hover Effect

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <a href="#" class="navBtns" aria-current="page">Home</a>
             </li>
             <li>
-              <a href="#" class="dark">Latest News</a>
+              <a class="hoverLink" href="#" class="dark">Latest News</a>
             </li>
             <li>
               <a href="#" class="dark">top News</a>
@@ -128,26 +128,26 @@
 
     <div class="footer">
       <ul class="list1">
-        <span id="b"> <strong><u>ABOUT</u></strong> </span
+        <span id="b" class="hovereffect"> <strong><u>ABOUT</u></strong> </span
         ><br />
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Contact us</a></li>
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Quick links</a></li>
+        <li><a href="#" class="hovereffect">About us</a></li>
+        <li><a href="#" class="hovereffect">Contact us</a></li>
+        <li><a href="#" class="hovereffect">Privacy Policy</a></li>
+        <li><a href="#" class="hovereffect">Quick links</a></li>
       </ul>
       <ul class="list2">
-        <span id="c"><strong><u>NEWS LINKS</u></strong></span>
+        <span id="c" class="hovereffect"><strong><u>NEWS LINKS</u></strong></span>
         <br />
-        <li><a href="#">Latest News</a></li>
-        <li><a href="#">Live TV</a></li>
-        <li><a href="#">Bollywood News</a></li>
-        <li><a href="#">Politics</a></li>
+        <li><a href="#" class="hovereffect">Latest News</a></li>
+        <li><a href="#" class="hovereffect">Live TV</a></li>
+        <li><a href="#" class="hovereffect">Bollywood News</a></li>
+        <li><a href="#" class="hovereffect">Politics</a></li>
       </ul>
       <ul class="list3">
-        <span id="a"><strong><u>SUPPORT</u></strong></span
+        <span id="a" class="hovereffect"><strong><u>SUPPORT</u></strong></span
         ><br />
-        <li><a href="#">FAQ's</a></li>
-        <li><a href="#">Feedback</a></li>
+        <li><a href="#" class="hovereffect">FAQ's</a></li>
+        <li><a href="#" class="hovereffect">Feedback</a></li>
       </ul>
     </div>
 
