Contact Form Added

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <a href="#" class="dark">World</a>
             </li>
             <li class="sm:mt-11">
-              <a href="#" class="contact">Contact Us</a>
+              <a href="./contactform.html" class="contact">Contact Us</a>
             </li>
             <li class="sm:mt-11">
               <label class="switch">
