--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li>
               <a href="#" class="dark">World</a>
             </li>
-            <li class="sm:mt-11">
+            <li class="sm:mt-9 my-4 -ml-1 md:ml-0">
               <a href="./contactform.html" class="contact">Contact Us</a>
             </li>
             <li class="sm:mt-11">
