modified world news UI

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <a href="#" class="dark">top News</a>
             </li>
             <li>
-              <a href="#" class="dark">World</a>
+              <a href="./world_news.html" class="dark">World</a>
             </li>
             <li class="sm:mt-11">
               <a href="#" class="contact">Contact Us</a>
