--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </button>
         <div class=" right hidden w-full md:block md:w-auto" id="navbar-default">
           <ul
-            class="flex flex-col p-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+            class="flex flex-col align-items-center p-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
           >
             <li>
               <a href="#" class="navBtns" aria-current="page">Home</a>
