Improvised the navbar section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>    
     <!-- nav bar  -->
 
-    <nav class="bg-black border-gray-200 px-2 sm:px-4 navbar">
+    <nav class="bg-blue border-gray-200 px-2 sm:px-4 navbar">
       <div
         class=" navHai container flex flex-wrap justify-between items-center mx-auto"
       >
@@ -71,13 +71,13 @@
               <a href="#" class="navBtns" aria-current="page">Home</a>
             </li>
             <li>
-              <a class=" dark hoverLink" href="#" class="dark">Latest News</a>
+              <a class=" dark hoverLink" href="#" class="dark">Trending News</a>
             </li>
             <li>
-              <a href="#" class="dark">top News</a>
+              <a href="#" class="dark">Dashboard</a>
             </li>
             <li>
-              <a href="./world_news.html" class="dark">World</a>
+              <a href="./world_news.html" class="dark">Explore World</a>
             </li>
             <li class="sm:mt-9 my-4 -ml-1 md:ml-0">
               <a href="./contactform.html" class="contact">Contact Us</a>
