Added help in support section

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
         <li><a href="#" class="hovereffect">Live TV</a></li>
         <li><a href="#" class="hovereffect">Bollywood News</a></li>
         <li><a href="#" class="hovereffect">Politics</a></li>
+
       </ul>
       <ul class="list3">
 
@@ -154,6 +155,8 @@
         ><br />
         <li><a href="#" class="hovereffect">FAQ's</a></li>
         <li><a href="#" class="hovereffect">Feedback</a></li>
+        <li><a href="#" class="hovereffect">Help</a></li>
+
       </ul>
     </div>
 
