Sticky nav bar , ui changes , scroll bar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </style>
   <body>    
     <!-- nav bar  -->
-
+<div class="sticky-top">
     <nav class="bg-blue border-gray-200 px-2 sm:px-4 navbar">
       <div
         class=" navHai container flex flex-wrap justify-between items-center mx-auto"
@@ -91,6 +91,7 @@
         </div>
       </div>
     </nav>
+  </div>
 
     <!-- <div class="navbar">
         <div class="logo">NEWS.com</div>
@@ -110,7 +111,7 @@
 
     <main>
       <h1 class="pt-24 Top-Heading text-4xl sm:text-xl">
-        Top Headlines of
+        TOP HEADLINES OF
         <div id="country"></div>
       </h1>
 
@@ -129,7 +130,7 @@
     <div class="footer">
       <ul class="list1">
 
-        <span id="b" class="hovereffect"> <strong><u>ABOUT</u></strong> </span
+        <span id="b" class="hovereffect"> <strong>ABOUT</strong> </span
 
         ><br />
         <li><a href="#" class="hovereffect">About us</a></li>
@@ -139,7 +140,7 @@
       </ul>
       <ul class="list2">
 
-        <span id="c" class="hovereffect"><strong><u>NEWS LINKS</u></strong></span>
+        <span id="c" class="hovereffect"><strong>NEWS LINKS</strong></span>
 
         <br />
         <li><a href="#" class="hovereffect">Latest News</a></li>
@@ -149,7 +150,7 @@
       </ul>
       <ul class="list3">
 
-        <span id="a" class="hovereffect"><strong><u>SUPPORT</u></strong></span
+        <span id="a" class="hovereffect"><strong>SUPPORT</strong></span
 
         ><br />
         <li><a href="#" class="hovereffect">FAQ's</a></li>
