UI improvement of the home page

--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
 
     <main>
       <h1 class="pt-24 Top-Heading text-4xl sm:text-xl">
-        TOP HEADLINES OF
-        <div id="country"></div>
+        Top Headlines of <div id="country"></div>
       </h1>
 
       <div id="news"></div>
