Added the changes listed under issue no.#86

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     }
   </style>
   <body> 
+      <button id = "btnScrollToTop">
+        <i class = "material-icons">↑</i>
+      </button>
+  
     <div class="preloader"></div>
     <!-- nav bar  -->
 <div class="sticky-top">
@@ -214,6 +218,17 @@
 
     <script src="script.js"></script>
     <script>
+
+      const btnScrollToTop = document.getElementById("btnScrollToTop");
+      btnScrollToTop.addEventListener("click", function(){
+        window.scrollTo({
+        top: 0,
+        left: 0,
+        behavior: "smooth"
+        });
+      });
+
+      
       var loader = document.getElementsByClassName("preloader");
       window.addEventListener("load", function(){
         loader[0].style.display = "none";
